[package]
publish = false
name = "regex-compile"
version = "0.0.1"  #:version
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/regex"
documentation = "https://docs.rs/regex-compile"
homepage = "https://github.com/rust-lang/regex"
description = "A regular expression compiler."
workspace = ".."
